# starfleet

./: .gitignore  ATTRIBUTIONS  Dockerfile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  sam_template.yaml  sample_samconfig.toml  setup.py  test_sam_template.yaml  test_sam_template_NO_ECR.yaml  tox.ini
.github/: dependabot.yml
.github/workflows/: python.yml
deploy/: starfleet-execution-role-org-management.yml  starfleet-execution-role-stackset.yml
docs/: 404.html  gen_ref_pages.py  index.html  objects.inv  sitemap.xml
docs/Attributions/: index.html
docs/Installation/: index.html
docs/Links/: index.html
docs/UserGuide/: index.html
docs/architecture/AccountIndex/: index.html
docs/architecture/Alerts/: index.html
docs/architecture/CLI/: index.html
docs/architecture/Configuration/: index.html
docs/architecture/Overview/: index.html
docs/architecture/PayloadTemplates/: index.html
docs/architecture/ResidentIAMRole/: index.html
docs/architecture/Secrets/: index.html
docs/architecture/Starbase/: index.html
docs/architecture/WorkerShips/: index.html
docs/blog/: index.html
docs/developerGuide/CheckList/: index.html
docs/developerGuide/GeneratingDocs/: index.html
docs/developerGuide/Overview/: index.html
docs/developerGuide/SAMConfiguration/: index.html
docs/installation/IAM/: index.html
docs/installation/MakeAccountIndex/: index.html
docs/installation/Overview/: index.html
docs/installation/PrepareConfiguration/: index.html
docs/installation/PreparePayload/: index.html
docs/installation/RunSAM/: index.html
docs/installation/SetupECR/: index.html
docs/installation/WrapUp/: index.html
docs/reference/SUMMARY/: index.html
docs/reference/starfleet/: index.html
docs/search/: search_index.json
docs/stylesheets/: extra.css
docs/userGuide/AccountIndexGenerator/: index.html
docs/userGuide/Overview/: index.html
docs/userGuide/Secrets/: index.html
mkdocs/: Attributions.md  Links.md  UserGuide.md  index.md  mkdocs.yml
mkdocs/architecture/: AccountIndex.md  Alerts.md  CLI.md  Configuration.md  Overview.md  PayloadTemplates.md  ResidentIAMRole.md  Secrets.md  Starbase.md  WorkerShips.md
mkdocs/blog/: .authors.yml  index.md
mkdocs/developerGuide/: CheckList.md  GeneratingDocs.md  Overview.md  SAMConfiguration.md
mkdocs/docs/: DeveloperGuide.md  Installation.md  index.md
mkdocs/installation/: IAM.md  MakeAccountIndex.md  Overview.md  PrepareConfiguration.md  PreparePayload.md  RunSAM.md  SetupECR.md  WrapUp.md
mkdocs/userGuide/: AccountIndexGenerator.md  Overview.md  PayloadTemplates.md  Secrets.md  Slack.md  Starbase.md
src/: requirements.txt
src/starfleet/: startup.py
tests/: conftest.py  test_cli_components.py  test_configuration.py  test_logger.py  test_slack.py  test_starfleet.py  test_utils.py
tests/account_index/: conftest.py  test_account_index_components.py  test_resolvers.py
tests/account_index_generator/: conftest.py  test_account_indexer_ship.py  test_default_account_index.py
tests/bad_configuration_files/: bad_configuration.yaml
tests/starbase/: conftest.py  test_starbase.py  test_utils.py
tests/test_configuration_files/: account_index_generator.yaml  another_file.yaml  aws_config.yaml  basic_plugin.yaml  github_sync.yaml  iam_role_worker.yaml  test_base_configuration.yaml
tests/worker_ship_utils/: conftest.py  test_niceties.py  test_schemas.py  test_utils.py  test_worker_ship.py
(+188 files in other folders)
