[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "starfleet"
authors = [
    {name = "Gemini", email = "careers@gemini.com"},
    {name = "Mike Grima", email = "michael.grima@gemini.com"},
]
version = "1.0.1"
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"starfleet.configuration_files" = ["*.yaml"]

[tool.setuptools.dynamic]
dependencies = {file = ["src/requirements.txt"]}

[project.scripts]
starfleet = "starfleet.cli.entrypoint:cli"

[project.optional-dependencies]
tests = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-xdist==3.5.0",
    "black==23.11.0",
    "flake8==6.1.0",
    "pylint==3.0.2",
    "tox==4.11.4",
    "moto==4.2.9",
    "mkdocs==1.5.3",
    "mkdocstrings[python]==0.24.0",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.1",
    "mkdocs-material==9.4.14",
    "cfn-lint>=0.77",
    "checkov>=2.3",
]

[tool.pytest.ini_options]
log_cli = true

[tool.black]
line-length = 160
