[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "starfleet"
authors = [
    {name = "Gemini", email = "careers@gemini.com"},
    {name = "Mike Grima", email = "michael.grima@gemini.com"},
]
version = "1.0.2"
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"starfleet.configuration_files" = ["*.yaml"]

[tool.setuptools.dynamic]
dependencies = {file = ["src/requirements.txt"]}

[project.scripts]
starfleet = "starfleet.cli.entrypoint:cli"

[project.optional-dependencies]
tests = [
    "pytest==8.2.1",
    "pytest-cov==5.0.0",
    "pytest-xdist==3.6.1",
    "black==24.4.2",
    "flake8==7.0.0",
    "pylint==3.2.2",
    "tox==4.15.0",
    "moto==5.0.4",
    "mkdocs==1.6.0",
    "mkdocstrings[python]==0.25.1",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.1",
    "mkdocs-material==9.5.25",
    "cfn-lint>=0.77",
    "checkov>=2.3",
    "setuptools==69.2.0"
]

[tool.pytest.ini_options]
log_cli = true

[tool.black]
line-length = 160
